feat: add delete tech endpoint
