# public/api-spec.json
@@ -495,6 +495,36 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Techs"
+        ],
+        "description": "Delete a specific technology by ID",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/TechIdParameter"
+          },
+          {
+            "$ref": "#/components/parameters/AccessTokenParameter"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Technology deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SuccessResponse"
+                },
+                "example": {
+                  "status": "success",
+                  "message": "Technology deleted successfully"
+                }
+              }
+            }
+          }
+        }
       }
     }
   },
